...
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/editText_Description"
        android:layout_width="325dp"
        android:layout_height="184dp"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText_Groupname"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:hint="GroupName"
...
        android:layout_marginRight="82dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner_location_GroupCreation"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="19dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_hobby_groupCreation"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Spinner
        android:id="@+id/spinner_hobby_groupCreation"
...
        app:layout_constraintTop_toBottomOf="@+id/txtView_group_name"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Cancel"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_Description"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_save"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.081" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="Save"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
...
